fixed project title alignment

--- a/app/styles/_portfolio.scss
+++ b/app/styles/_portfolio.scss
@@ -259,7 +259,8 @@
 
 .site-title {
     width: 90%;
-    margin: 10px auto ;
+    max-width  : 675px;
+    margin: 10px auto;
 
     h3 {
         // text-align     : center;
